frontend/test/should_pass/bitbucket23.gm
package tst {
        node class Test {
                function toText() : string {
                        return("abc");
                }
        }
}
