frontend/test/should_fail/computations_no_exec_method.gm
node class N
{
	function bar() : int
	{
		exec( t() ); // no exec in (function) method
		return(42);
	}
}